--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
     <!-- Bootstrap CSS -->
+    <!-- build:css css/main.css-->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/bootstrap-social.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <!-- endbuild -->
 </head>
 
 <body>
@@ -30,17 +32,101 @@
                     <li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span> Menu</a></li>
                     <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
                 </ul>
-                <span class="navbar-text"><a data-toggle="modal" data-target="#loginModal"><span class="fa fa-sign-in"></span> Login </a></span>
+                <span class="navbar-text"><a id="loginButton"><span class="fa fa-sign-in"></span> Login </a></span>
             </div>
         </div>
     </nav>
+    <div id="reserveModal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h3 class="modal-title">Reserve a Table</h3>
+                    <button type="button" class="close" id="reserveModalCloseX">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="button-group form-group row">
+                            <label for="numofguest" class="col-md-2 col-form-label"><strong>Number of Guests</strong></label>
+                            <div class="form-check col-2 col-md-1">
+                                <label class="form-check-label" for="guest1"> 
+                                <input type="radio" class="form-check-input" id="guest1" name="numofguest">1
+                                </label>
+                            </div>
+                            <div class="form-check col-2 col-md-1">
+                                <label class="form-check-label"  for="guest2"> 
+                                <input type="radio" class="form-check-input" id="guest2" name="numofguest">2
+                                </label>
+                            </div>
+                            <div class="form-check col-2 col-md-1">
+                                <label class="form-check-label"  for="guest3">
+                                <input type="radio" class="form-check-input" id="guest3" name="numofguest">3
+                                </label>
+                            </div>
+                            <div class="form-check col-2 col-md-1">
+                                <label class="form-check-label"  for="guest4">
+                                <input type="radio" class="form-check-input" id="guest4" name="numofguest">4
+                                </label>
+                            </div>
+                            <div class="form-check col-2 col-md-1">
+                                <label class="form-check-label"  for="gues51">
+                                <input type="radio" class="form-check-input" id="guest5" name="numofguest">5
+                                </label>
+                            </div>
+                            <div class="form-check col-2 col-md-1">
+                                <label class="form-check-label"  for="guest6s">
+                                <input type="radio" class="form-check-input" id="guest6" name="numofguest">6
+                                </label>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <lable for="options" class="col-md-2 col-form-label"><strong>Section</strong></lable>
+                            <div class="col-md-10 botton-group"  data-toggle="buttons">
+                                <label class="btn btn-success active">
+                                    <input type="radio" name="options" id="option1" autocomplete="off" checked> Non-Smoking
+                                </label>
+                                <label class="btn btn-danger">
+                                    <input type="radio" name="options" id="option2" autocomplete="off"> Smoking
+                                </label>
+                            </div>
+                        </div>
+                        <div class="row button-group form-group">
+                            <label for="datetime" class="col-md-2 col-form-label"><strong>Date and Time</strong></label>
+                            <div class="col-md-5 input-group">
+                                <div class="input-group-addon"><i class="fa fa-calendar"></i></div>
+                                <input type="text" class="form-control" id="date" name="date" placeholder="Date">
+                            </div>
+                            <div class="col-md-5 input-group">
+                                <div class="input-group-addon"><i class="fa fa-clock-o"></i></div>
+                                <input type="text" class="form-control" id="time" name="time" placeholder="Time">
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <div class="container">
+                        <div class="row">
+                            <div class="offset-2">
+                                <button type="button" class="btn btn-default btn-outline-secondary" id="reserveModalCancel">
+                                    Cancel
+                                </button>
+                                <button type="submit" class="btn btn-primary">
+                                    Reserve
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <div id="loginModal" class="modal fade" role="dialog">
         <div class="modal-dialog modal-lg" role="content">
         <!-- Modal content-->
             <div class="modal-content">
                 <div class="modal-header">
                     <h4 class="modal-title">Login </h4>
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <button type="button" class="close" id="loginModalX">&times;</button>
                 </div>
                 <div class="modal-body">
                     <form class="form-inline">
@@ -60,7 +146,7 @@
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default btn-sm" data-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-default btn-sm" id="loginModalCancel">Cancel</button>
                     <button type="submit" class="btn btn-primary btn-sm">Sign in</button>
                 </div>
             </div>
@@ -76,15 +162,61 @@
                 <div class="col col-sm-6 align-self-center">
                     <div class="row">
                         <div class="col-12 col-sm-6"><img src="img/logo.png" class="img-fluid"></div>
-                        <div class="col-12 col-sm-6 align-self-center"><a role="button" class="btn btn-warning btn-block btn-sm" 
-                            data-toggle="tooltip" data-html="true" title="Or call us at <br><strong>+852 12345678</strong>" data-placement="bottom" 
-                            href="#revserve">Reserve Table</a></div>
+                        <div class="col-12 col-sm-6 align-self-center">
+                            <a role="button" class="btn btn-warning btn-block btn-sm"
+                            href="#revserve" id="reserveButton">Reserve Table</a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </header>
-
+    <div class="container">
+        <div class="row row-content">
+            <div class="col">
+                <div id="mycarousel" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-inner" role="listbox">
+                        <div class="carousel-item active">
+                            <img class="d-block img-fluid" src="img/uthappizza.png" alt="uthappizza">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h2>Uthappizza <span class="badge badge-danger">HOT</span> <span class="badge badge-pill badge-default">$4.99</span></h2>
+                                <p class="hidden-xs-down">A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>        
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block img-fluid" src="img/buffet.png" alt="buffet">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h2 class="mt-0">Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
+                                <p class="hidden-xs-down">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>        
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block img-fluid" src="img/alberto.png" alt="buffet">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h2>Alberto Somayya</h2>
+                                <h4>Executive Chef</h4>
+                                <p class="hidden-xs-down">Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
+                            </div>
+                        </div>
+                    </div>
+                    <ol class="carousel-indicators">
+                        <li data-target="#mycarousel" data-slide-to="0" class="active"></li>
+                        <li data-target="#mycarousel" data-slide-to="1"></li>
+                        <li data-target="#mycarousel" data-slide-to="2"></li>
+                    </ol>
+                    <a class="carousel-control-prev" href="#mycarousel" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon"></span>
+                    </a>
+                    <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon"></span>
+                    </a>
+                    <button class="btn btn-danger btn-sm" id="carousel-button">
+                        <span class="fa fa-pause"></span>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="container">
         <div class="row row-content align-items-center">
             <div class="col-sm-4 col-md-3 flex-last">
@@ -132,68 +264,6 @@
                 </div>
             </div>
         </div>
-        <div class="row row-content">
-            <div class="col col-sm-8 aligh-self-center">
-                <div class="card" id="revserve">
-                    <h3 class="card-header card-warning text-white">Reserve a Table</h3>
-                    <div class="card-block">
-                        <form>
-                            <div class="button-group form-group row">
-                                <label for="numofguest" class="col-md-2 col-form-label"><strong>Number of Guests</strong></label>
-                                <div class="form-check col-2 col-md-1">
-                                    <label class="form-check-label" for="guest1"> 
-                                    <input type="radio" class="form-check-input" id="guest1" name="numofguest">1
-                                    </label>
-                                </div>
-                                <div class="form-check col-2 col-md-1">
-                                    <label class="form-check-label"  for="guest2"> 
-                                    <input type="radio" class="form-check-input" id="guest2" name="numofguest">2
-                                    </label>
-                                </div>
-                                <div class="form-check col-2 col-md-1">
-                                    <label class="form-check-label"  for="guest3">
-                                    <input type="radio" class="form-check-input" id="guest3" name="numofguest">3
-                                    </label>
-                                </div>
-                                <div class="form-check col-2 col-md-1">
-                                    <label class="form-check-label"  for="guest4">
-                                    <input type="radio" class="form-check-input" id="guest4" name="numofguest">4
-                                    </label>
-                                </div>
-                                <div class="form-check col-2 col-md-1">
-                                    <label class="form-check-label"  for="gues51">
-                                    <input type="radio" class="form-check-input" id="guest5" name="numofguest">5
-                                    </label>
-                                </div>
-                                <div class="form-check col-2 col-md-1">
-                                    <label class="form-check-label"  for="guest6s">
-                                    <input type="radio" class="form-check-input" id="guest6" name="numofguest">6
-                                    </label>
-                                </div>
-                            </div>
-                            <div class="row button-group form-group">
-                                <label for="datetime" class="col-md-2 col-form-label"><strong>Date and Time</strong></label>
-                                <div class="col-md-5 input-group">
-                                    <div class="input-group-addon"><i class="fa fa-calendar"></i></div>
-                                    <input type="text" class="form-control" id="date" name="date" placeholder="Date">
-                                </div>
-                                <div class="col-md-5 input-group">
-                                    <div class="input-group-addon"><i class="fa fa-clock-o"></i></div>
-                                    <input type="text" class="form-control" id="time" name="time" placeholder="Time">
-                                </div>
-                            </div>
-                            <div class="row form-group">
-                                <div class="offset-md-2 col-md-10">
-                                    <button type="submit" class="btn btn-primary">
-                                        Reserve
-                                    </button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
     </div>
 
     <footer class="footer">
@@ -234,20 +304,16 @@
                 <div class="col-auto">
                     <p>© Copyright 2015 Ristorante Con Fusion</p>
                 </div>
-           </div>
+           </div> 
         </div>
     </footer>
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
+    <!-- build:js js/main.js -->
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/tether/dist/js/tether.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script>
-        $(document).ready(function()
-            {
-                $('[data-toggle="tooltip"]').tooltip();
-            }
-        );
-    </script>
+    <script src="js/scripts.js"></script>
+    <!-- endbuild -->
 </body>
 
 </html>
